--- a/MVC/ProjectNews/Views/Shared/_Header.html
+++ b/MVC/ProjectNews/Views/Shared/_Header.html
@@ -13,7 +13,7 @@
     <!-- jQuery -->
     <script src="../../Scripts/js/jquery.js"></script>
     <!-- My script -->
-    <script src="../../Scripts/AjaxJquery/Home.js"></script>
+
     <!-- Bootstrap Core CSS -->
     <link href="../../Scripts/css/bootstrap.min.css" rel="stylesheet">
 
@@ -58,7 +58,7 @@
 
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input id="txtseach" type="text" class="form-control" >
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
